--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,6 @@ applications:
 - name: spring-music
   memory: 512M
   instances: 2
-  host: spring-music-${random-word}
+  host: spring-music-darren
   path: build/libs/spring-music.war
 
