--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 ---
 applications:
-- name: spring-music
+- name: spring-music-2
   memory: 512M
   instances: 2
-  host: spring-music-darren
+  host: spring-music-darren-2
   path: build/libs/spring-music.war
 
